--- a/Day 2/styles.css
+++ b/Day 2/styles.css
@@ -48,7 +48,7 @@ p {
 }
 footer {
     color: rgb(3, 13, 16);
-    font-size: smaller;git 
+    font-size: smaller;
     position: fixed;
     bottom: 0;
     right: 0;
