--- a/Day 4/styles.css
+++ b/Day 4/styles.css
@@ -24,7 +24,7 @@ body {font-family: 'Courier New', Courier, monospace;
 .container {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-items: center;
     
 }
 .menu a {
@@ -88,9 +88,13 @@ h2{
 .footer{
     display: flex;
 justify-content: space-between;
+align-items: end;
     background: black;
     color: aliceblue;
-    bottom: 0;
+    position: fixed;
+left: 0;
+bottom: 0;
+width: 100%
 }
 
 
